--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,27 +30,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  get_it:
-  flutter_bloc:
-  themed:
+  # default
+  flutter_native_splash:
   flutter_screenutil:
-  skeletonizer:
-  lottie:
+  flutter_bloc:
+  equatable:
+  themed:
+  dio:
+  get_it:
+  sqflite:
   shared_preferences:
   form_field_validator:
-  equatable:
-  dio:
-  path:
-  image_picker:
-  sqflite:
+  # localization & notifications
   awesome_notifications:
-  cached_network_image:
   easy_localization:
+  # images & files
+  cached_network_image:
+  image_cropper:
+  image_picker:
   flutter_svg:
-  dropdown_button2:
-  flutter_material_pickers:
-  flutter_native_splash:
-
+  lottie:
+  image:
+  path:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
